{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 147,
  "lineage": "8098a15b-1a90-23fa-4115-8b31d1631ea4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1_AK1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/networkInterfaces/VM1_nic1",
            "internal_domain_name_suffix": "hgup40bogfbexnh2tzcl5yvjhc.oslx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "VM1_nic1_conf",
                "primary": true,
                "private_ip_address": "172.16.1.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/publicIPAddresses/pubIP1",
                "subnet_id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/virtualNetworks/AK1_net/subnets/subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "norwayeast",
            "mac_address": "7C-ED-8D-F2-F2-02",
            "name": "VM1_nic1",
            "private_ip_address": "172.16.1.4",
            "private_ip_addresses": [
              "172.16.1.4"
            ],
            "resource_group_name": "AK1_ressursgruppe",
            "virtual_machine_id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Compute/virtualMachines/LNX-VM1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "VM1_nic1",
            "resource_group_name": "AK1_ressursgruppe",
            "subscription_id": "340ce909-e132-4535-abbd-21f5b5f772da"
          },
          "dependencies": [
            "azurerm_public_ip.pub_ip1_AK1",
            "azurerm_resource_group.res_group_AK1",
            "azurerm_subnet.subnet1_AK1",
            "azurerm_virtual_network.vnet_AK1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic2_AK1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/networkInterfaces/VM2_nic2",
            "internal_domain_name_suffix": "hgup40bogfbexnh2tzcl5yvjhc.oslx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "VM2_nic2_conf",
                "primary": true,
                "private_ip_address": "172.16.2.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/virtualNetworks/AK1_net/subnets/subnet2"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "norwayeast",
            "mac_address": "00-0D-3A-87-94-41",
            "name": "VM2_nic2",
            "private_ip_address": "172.16.2.4",
            "private_ip_addresses": [
              "172.16.2.4"
            ],
            "resource_group_name": "AK1_ressursgruppe",
            "virtual_machine_id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Compute/virtualMachines/LNX-VM2"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "VM2_nic2",
            "resource_group_name": "AK1_ressursgruppe",
            "subscription_id": "340ce909-e132-4535-abbd-21f5b5f772da"
          },
          "dependencies": [
            "azurerm_resource_group.res_group_AK1",
            "azurerm_subnet.subnet2_AK1",
            "azurerm_virtual_network.vnet_AK1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "net_sg1_AK1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/networkSecurityGroups/netSG_VM1",
            "location": "norwayeast",
            "name": "netSG_VM1",
            "resource_group_name": "AK1_ressursgruppe",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "netSG_VM1",
            "resource_group_name": "AK1_ressursgruppe",
            "subscription_id": "340ce909-e132-4535-abbd-21f5b5f772da"
          },
          "dependencies": [
            "azurerm_resource_group.res_group_AK1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "net_sg2_AK1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/networkSecurityGroups/netSG_VM2",
            "location": "norwayeast",
            "name": "netSG_VM2",
            "resource_group_name": "AK1_ressursgruppe",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "172.16.1.4",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "netSG_VM2",
            "resource_group_name": "AK1_ressursgruppe",
            "subscription_id": "340ce909-e132-4535-abbd-21f5b5f772da"
          },
          "dependencies": [
            "azurerm_resource_group.res_group_AK1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pub_ip1_AK1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/publicIPAddresses/pubIP1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.251.34.133",
            "ip_version": "IPv4",
            "location": "norwayeast",
            "name": "pubIP1",
            "resource_group_name": "AK1_ressursgruppe",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "pubIP1",
            "resource_group_name": "AK1_ressursgruppe",
            "subscription_id": "340ce909-e132-4535-abbd-21f5b5f772da"
          },
          "dependencies": [
            "azurerm_resource_group.res_group_AK1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1_AK1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/virtualNetworks/AK1_net/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "AK1_ressursgruppe",
            "virtual_network_name": "AK1_net"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet1",
            "resource_group_name": "AK1_ressursgruppe",
            "subscription_id": "340ce909-e132-4535-abbd-21f5b5f772da",
            "virtual_network_name": "AK1_net"
          },
          "dependencies": [
            "azurerm_resource_group.res_group_AK1",
            "azurerm_virtual_network.vnet_AK1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2_AK1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/virtualNetworks/AK1_net/subnets/subnet2",
            "name": "subnet2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "AK1_ressursgruppe",
            "virtual_network_name": "AK1_net"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet2",
            "resource_group_name": "AK1_ressursgruppe",
            "subscription_id": "340ce909-e132-4535-abbd-21f5b5f772da",
            "virtual_network_name": "AK1_net"
          },
          "dependencies": [
            "azurerm_resource_group.res_group_AK1",
            "azurerm_virtual_network.vnet_AK1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sg1_to_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/virtualNetworks/AK1_net/subnets/subnet1",
            "network_security_group_id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/networkSecurityGroups/netSG_VM1",
            "subnet_id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/virtualNetworks/AK1_net/subnets/subnet1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.net_sg1_AK1",
            "azurerm_resource_group.res_group_AK1",
            "azurerm_subnet.subnet1_AK1",
            "azurerm_virtual_network.vnet_AK1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sg2_to_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/virtualNetworks/AK1_net/subnets/subnet2",
            "network_security_group_id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/networkSecurityGroups/netSG_VM2",
            "subnet_id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/virtualNetworks/AK1_net/subnets/subnet2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.net_sg2_AK1",
            "azurerm_resource_group.res_group_AK1",
            "azurerm_subnet.subnet2_AK1",
            "azurerm_virtual_network.vnet_AK1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_AK1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "68ffa839-312e-4b42-b4fc-9e44bfe2a93a",
            "id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/virtualNetworks/AK1_net",
            "location": "norwayeast",
            "name": "AK1_net",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "AK1_ressursgruppe",
            "subnet": [
              {
                "address_prefixes": [
                  "172.16.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/virtualNetworks/AK1_net/subnets/subnet1",
                "name": "subnet1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/networkSecurityGroups/netSG_VM1"
              },
              {
                "address_prefixes": [
                  "172.16.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/virtualNetworks/AK1_net/subnets/subnet2",
                "name": "subnet2",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/340ce909-e132-4535-abbd-21f5b5f772da/resourceGroups/AK1_ressursgruppe/providers/Microsoft.Network/networkSecurityGroups/netSG_VM2"
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AK1_net",
            "resource_group_name": "AK1_ressursgruppe",
            "subscription_id": "340ce909-e132-4535-abbd-21f5b5f772da"
          },
          "dependencies": [
            "azurerm_resource_group.res_group_AK1"
          ]
        }
      ]
    }
  ]
}